--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 
 body{
 background: var(--bg-url) no-repeat top center/cover;
+height: 100vh;
 }
 
 body * {
@@ -153,4 +154,15 @@ ul li a:hover {
 footer {
   padding: 24px;
   text-align: center;
+  font-size: 14px;
+}
+
+/* media queries*/
+@media (min-width: 700px){
+  :root {
+    --bg-url: url(./assets/assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+  }
 }
